# Moonlight-Launcher

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  moonlight-launcher.toml
Configs/: Compiler.cmake  FindCmrc.cmake  FindEigen.cmake  FindGlfw.cmake  FindIconFont.cmake  FindImGui.cmake  FindPromptFont.cmake  FindSetDPI.cmake  FindSpdlog.cmake  FindToml.cmake  System.cmake
Sources/: application.cpp  application.h  display.cpp  display.h  font.h  logger.h  main.cpp  path.h
